<resources>
    <string name="app_name">InventoryApp</string>
    <string name="login">Login</string>
    <string name="inventory_wizard">Inventory Wizard</string>
    <string name="emailaddress">Please enter your email address</string>
    <string name="password">Please enter your password</string>
    <string name="reenter">Please re-enter your password</string>
    <string name="register">Register</string>
    <string name="deleteItem">Delete Item</string>
    <string name="addItem">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="qty_0">Qty: 0</string>
    <string name="_0_00">$0.00</string>
    <string name="delete_button">Delete Button</string>
    <string name="item_image">item image</string>
    <string name="request_sms_permission">Request SMS Permission</string>
    <string name="click_the_button_to_request_sms_permission">Click the button to request SMS permission</string>
    <string name="notification_message">Inventory Wizard needs to send SMS messages. Please grant this permission.</string>
    <string name="create">Create Account</string>
    <string name="cancel">Return</string>
    <string name="please_enter_item_quantity">Please enter Item Quantity</string>
    <string name="add_item">Add/Update Item</string>
    <string name="price">Price</string>
    <string name="item_price">Item Price</string>
    <string name="item_qty">Item Qty</string>
    <string name="please_enter_item_name">Please enter item name</string>
    <string name="please_enter_item_price">Please enter Item Price</string>
    <string name="sms">SMS</string>
    <string name="add">Add</string>
    <string name="send_sms">Send SMS</string>
</resources>