<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        >
        <ImageView
            android:id="@+id/imgViewItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/item_image"
            android:src="@drawable/item"
            />


    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"

         >
         <TextView
             android:id="@+id/tvItemName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/item_name"
             android:textAlignment="textStart"
             android:textColor="#120f46"
             android:layout_weight="3"
             android:textSize="18sp" />
         <EditText
             android:id="@+id/edItemName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:textSize="18sp"
             android:autofillHints="name"
             android:focusable="true"
             android:layout_weight="1"
             android:hint="@string/please_enter_item_name"
             android:inputType="text"
             android:textColorHighlight="#120f46"
             android:textColorHint="#120f46" />
     </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvItemQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_qty"
        android:textAlignment="textStart"
        android:textColor="#120f46"
        android:layout_weight="3"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edItemQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:focusable="true"
        android:hint="@string/please_enter_item_quantity"
        android:inputType="number"
        android:textColorHighlight="#120f46"
        android:textColorHint="#120f46"
        android:layout_weight="1"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textAlignment="textStart"
            android:textColor="#120f46"
            android:layout_weight="3"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:focusable="true"
            android:hint="@string/please_enter_item_price"
            android:inputType="numberDecimal"
            android:textColorHighlight="#120f46"
            android:textColorHint="#120f46"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            android:width="100dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:id="@+id/btnAddItem" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:gravity="center"
            android:id="@+id/btnCancel"  />
    </LinearLayout>


</LinearLayout>