<!-- res/layout/grid_item_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="350px"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/item_image"
            android:src="@drawable/item" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:paddingTop="4dp"
            android:textAlignment= "gravity"
            android:layout_weight="2"
            android:text="@string/item_name" />
        <ImageButton
            android:id="@+id/btnDeleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_button"
            android:clickable="true"
            android:src="@drawable/delete"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvItemID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:text="@string/qty_0" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="14sp"
        android:layout_weight="1"
        android:text="@string/_0_00" />


    </LinearLayout>


</LinearLayout>