<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"

    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/inventory_wizard"
        android:textAlignment="center"
        android:textColor="#120f46"
        android:textSize="35sp" />
    <EditText
        android:id="@+id/edEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="-4dp"
        android:autofillHints="emailAddress"
        android:focusable="true"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress"
        android:textColorHighlight="#120f46"
        android:textColorHint="#120f46" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:id="@+id/edPwd"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-4dp"
        android:textColorHighlight="#120f46"
        android:textColorHint="#120f46"
        android:hint="@string/password" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:id="@+id/edReenterPwd"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-4dp"
        android:textColorHighlight="#120f46"
        android:textColorHint="#120f46"
        android:hint="@string/reenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:width="100dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:id="@+id/btnRegister"  />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:gravity="center"
            android:id="@+id/btnCancel"  />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content" />


</LinearLayout>